--- a/res/templates/adm/listAdm.htm
+++ b/res/templates/adm/listAdm.htm
@@ -11,7 +11,7 @@
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h3 class="mb-0">管理员列表</h3>
 
-        <a href="/adm/addUi" class="btn btn-success">新增</a>
+        <a href="/adm/addAdm.htm" class="btn btn-success">新增</a>
     </div>
 
     <div class="card shadow-sm">
