--- a/res/templates/adm/home.html
+++ b/res/templates/adm/home.html
@@ -61,6 +61,16 @@
                 <i class="bi bi-people me-2"></i> 管理员列表
             </a>
 
+
+            <a href="/admin/listAdm" target="mainFrame" class="d-block mb-2 text-decoration-none">
+                <i class="bi bi-people me-2"></i> -------------
+            </a>
+
+            <a href="/admin/qryUsr" target="mainFrame" class="d-block mb-2 text-decoration-none">
+                <i class="bi bi-people me-2"></i> 成员列表
+            </a>
+
+
             <a href="/adm/settings.htm" target="mainFrame" class="d-block mb-2 text-decoration-none">
                 <i class="bi bi-gear me-2"></i> 系统设置
             </a>
